package com.gestion_vuelos.exercise_jpa.model;

public class Pasajero extends Persona{
}
